GCC Bugzilla – Bug 14944
[3.4 only] ICE when gcc reads *.gcda file of different version
Last modified: 2006-02-28 09:13:11 UTC
GCC ICEs when it reads counters file produced by gcc of different version: $ gcc-3.5 hello.c -fprofile-arcs $ ./a.out hello, world $ gcc hello.c hello.c:0: warning: `hello.gcda' is version ` Internal compiler error: Error reporting routines re-entered. Please submit a full bug report, with preprocessed source if appropriate. See <URL:http://gcc.gnu.org/bugs.html> for instructions. Fix for this is trivial, I will send it to gcc-patches.
patch here: http://gcc.gnu.org/ml/gcc-patches/2004-04/msg00800.html
Confirmed.
Subject: Bug 14944 CVSROOT: /cvs/gcc Module name: gcc Changes by: wilson@gcc.gnu.org 2004-04-29 06:29:00 Modified files: gcc : ChangeLog coverage.c pretty-print.c Log message: Patch from Serge Belyshev. PR 14944 * coverage.c (read_counts_file): Fix usage of warning () call. * pretty-print.c (pp_base_format_text): Fix typo in the comment. Patches: http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.3508&r2=2.3509 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/coverage.c.diff?cvsroot=gcc&r1=1.33&r2=1.34 http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/pretty-print.c.diff?cvsroot=gcc&r1=2.10&r2=2.11
Fixed for 3.5.0.
*** Bug 17124 has been marked as a duplicate of this bug. ***
Why not backport the patch to gcc 3.4?
Postponed all ice-on-invalid bugs to GCC 3.4.3.
Postponed until GCC 3.4.4.
Fixed in 3.4.6 too.