re PR gcov-profile/14944 ([3.4 only] ICE when gcc reads *.gcda file of different version)

Patch from Serge Belyshev.
PR 14944
* coverage.c (read_counts_file): Fix usage of warning () call.
* pretty-print.c (pp_base_format_text): Fix typo in the comment.

From-SVN: r81276